--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <p>
    <h2>"Hola Saludos a todos" </h2>
   </p>
+  <div id="espacio">  </div>
 </body>
 
 <script src="./funciones.js"> </script>
 </html>
+
